@@ -1,10 +1,17 @@
 #!perl -T
-use Test::More tests => 3;
-use Test::NoWarnings;
 use charnames ":full";
 
 use Text::CSV::R qw(:all);
 use Data::Dumper;
+
+use Test::More;
+if ($] < 5.008) {
+    my $msg = 'Unicode requires Perl > 5.008';
+    plan skip_all => $msg;
+}
+else {
+    plan tests => 2;
+}    
 
 my $M_ref = read_csv('t/testfiles/unicode.dat', header=>0, encoding => 'utf8');
 
@@ -17,4 +24,3 @@ close $IN;
 
 is($M_ref->[1][1], "U2 should \N{SKULL AND CROSSBONES}", 
     'read unicode file correctly');
-
