@@ -7,6 +7,7 @@ Revision history for Perl extension Text::CSV::R.
     - col_names and row_names in write now support array references
     - fixed special characters in POD of append option
     - code cleanup
+    - Unicode test requires Perl 5.8+ 
     - Bugfix: default dec of read_csv2 was q{.}, not q{,}
     - Bugfix: col_names option in write ignored
 
